--- a/DATA.Rmd
+++ b/DATA.Rmd
@@ -651,7 +651,7 @@ ggplot(word_data, aes(label = word, size = n, color = n)) +
 
 ```
 
-### TO CHECK 
+### Network Graph 
 
 ```{r}
 df_pairs <- final_data %>%
