--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -520,6 +520,8 @@ write.csv(final_data, "final_data.csv")
 
 # ANALYSIS & VISUALIZATIONS
 
+In this section, we present a series of visualizations that explore various aspects of movie data, focusing on popularity and awards. Through these graphs, we aim to uncover trends, patterns, and insights that highlight the dynamics of the film industry over time.
+
 ## Necessary Libraries
 
 ```{r}
@@ -541,9 +543,7 @@ library(RColorBrewer)
 ```
 
 
-## Ekin
-
-#### 1. Number of Movies by Year
+## Number of Movies by Year
 
 This bar chart displays the **number of movies released per year** from 2000 to 2024. The **x-axis represents the release year**, while the **y-axis shows the number of movies**. The trend suggests an **increase in movie production over time**, with a significant peak in 2023. There are some fluctuations, but overall, more movies have been released in recent years compared to the early 2000s.
 
@@ -559,7 +559,7 @@ ggplot(final_data, aes(x = as.factor(release_year))) +
 
 ```
 
-### 2. Movie Distribution by Country (Top 10 countries producing the most movies)
+## Movie Distribution by Country (Top 10 countries producing the most movies)
 
 This bar chart displays the **top 10 countries that have produced the most movies**. The **y-axis represents the countries**, while the **x-axis shows the number of movies** produced. France (**FR**) leads as the **top movie-producing country**, followed closely by the **United States (US)**. Germany (**DE**), the United Kingdom (**GB**), and Spain (**ES**) also have significant movie production. The chart highlights that European countries dominate the list, with **Turkey (TR) and India (IN)** contributing fewer films compared to the others.
 
@@ -577,7 +577,7 @@ ggplot(top_countries, aes(x = reorder(country, n), y = n)) +
 
 ```
 
-### 3. Popularity Distribution
+## Popularity Distribution
 
 This histogram illustrates the **distribution of movie popularity scores**. The **x-axis represents popularity scores**, while the **y-axis indicates the number of movies** in each range. Most movies have a popularity score between **3 and 4**, with a significant concentration in this range. There are very few movies with popularity scores **below 2 or above 6**, indicating that extreme popularity scores are rare in this dataset.
 
@@ -590,7 +590,7 @@ ggplot(final_data, aes(x = popularity)) +
 
 ```
 
-### 5. Language Distribution (Top 10 most used languages)
+## Language Distribution (Top 10 most used languages)
 
 This bar chart shows the **top 10 most used languages in movie production**. The **y-axis lists the languages**, while the **x-axis represents the number of movies** produced in each language. **Japanese (ja)** leads as the most frequently used language, followed by **French (fr) and Spanish (es)**. Other widely used languages include **Korean (ko), Italian (it), and German (de)**. The chart highlights a strong presence of **European and Asian languages** in movie production, with **Hindi (hi) having the lowest count among the top 10**.
 
@@ -650,7 +650,7 @@ ggplot(word_data, aes(label = word, size = n, color = n)) +
 
 ```
 
-## TO CHECK 
+## Network Graph
 
 ```{r}
 df_pairs <- final_data %>%
@@ -716,9 +716,9 @@ legend("topright", legend = names(country_colors),  # Country names
 
 This **Movie Co-Production Chord Diagram** shows international film collaborations, with each country assigned a unique color. Thicker links indicate stronger partnerships. The **US, France, and Germany** are the most connected, highlighting their major role in global productions. Other countries like **Spain, Italy, and the UK** also show significant collaborations, while **Turkey and India** have fewer but notable connections. The diagram effectively illustrates the global nature of co-productions in the film industry.
 
-## Au
-
 ## Preparing the data
+
+In this code, we prepare the data for visualizations by grouping the dataset by movie title and summarizing key attributes such as popularity, release dates, and awards. We then filter the data to identify the top 10 most popular movies based on their average popularity score. This process ensures that the data is structured and ready for creating insightful visualizations.
 
 ```{r}
 # Assuming final_data is your dataset
@@ -749,8 +749,10 @@ top_10_movies <- grouped_data %>%
 
 
 ## Awards Distribution
-to show the distribution of different awards won by the top 10 movies
-### all movies
+
+The provided code generates bar charts to visualize the distribution of awards among movies, using data from a dataset. For all movies, it sums up the counts of various awards and creates a bar plot to show the dominance of Academy Awards and nominations. Similarly, for the top 10 most popular movies, it highlights the prevalence of Academy recognition, while other prestigious awards like the Palme d'Or and Golden Lion are less represented.
+
+### Awards Distribution for All Movies
 
 ```{r}
 # Create a bar plot to show the distribution of different awards won by movies
@@ -767,7 +769,13 @@ highchart() %>%
   hc_subtitle(text = "All movies")
 ```
 
-### top 10 movies
+The first bar chart illustrates the distribution of various awards across all movies in the dataset. We can notice:
+
+★ Academy Award and Academy Nominated: Both categories have the highest counts, indicating that a significant number of movies have either won or been nominated for Academy Awards. This suggests a strong representation of these movies in prestigious award ceremonies.
+
+★ Palme d'Or and Golden Lion: These awards have much lower counts compared to the Academy-related categories. This indicates fewer movies in the dataset have received these awards, which are associated with the Cannes Film Festival (Palme d'Or) and the Venice Film Festival (Golden Lion).
+
+### Awards Distribution for Top 10 Most Popular Movies
 
 ```{r}
 # Create a bar plot to show the distribution of different awards won by movies
@@ -785,10 +793,19 @@ highchart() %>%
 
 ```
 
+The second bar chart focuses on the top 10 most popular movies, showing a similar pattern:
+
+★ Academy Award and Academy Nominated: These categories again dominate, with equal counts, suggesting that the most popular movies are also frequently recognized by the Academy.
+
+★ Palme d'Or and Golden Lion: These awards are absent in the top 10 most popular movies, indicating that popularity, as measured here, does not necessarily correlate with winning these specific awards.
+
+
+Both charts highlight the prominence of Academy Awards and nominations in the dataset, while Palme d'Or and Golden Lion awards are less common. The top 10 most popular movies are particularly notable for their Academy recognition, but not for the other prestigious awards, suggesting a potential disparity between popularity and critical acclaim from international film festivals.
+
 
 ## Top Movies by Popularity
 
-a bar plot to highlight the top 10 movies by popularity and show their awards
+The code generates a bar and line chart to visualize the top 10 movies by popularity, highlighting various awards they have received. It uses the highchart function to create a column chart for popularity and overlays line charts to represent different awards, such as Academy Awards, nominations, Palme d'Or, and Golden Lion.
 
 ```{r}
 # Create a bar plot to highlight the top 10 movies by popularity and show their awards
@@ -805,11 +822,11 @@ highchart() %>%
 
 ```
 
+The graph illustrates the popularity of the top 10 movies with bars, while lines indicate the awards each movie has won. "I'm Still Here" stands out with the highest popularity, though it has minimal awards. Most movies show a consistent pattern of receiving Academy nominations, but few have won the Palme d'Or or Golden Lion, suggesting that popularity does not necessarily correlate with winning these prestigious awards.
 
 ## Popularity by release year
 
-[Line chart]
-This chart will show how the average popularity of movies has changed over the years. It can help identify trends in movie popularity over time.
+The code calculates the average popularity of movies for each release year and creates a line chart to visualize these trends over time. It groups the data by release year, computes the mean popularity, and uses the highchart function to plot the results, highlighting how movie popularity has evolved.
 
 ```{r}
 # Calculate average popularity by release year
@@ -828,6 +845,7 @@ highchart() %>%
 
 ```
 
+The graph shows fluctuations in movie popularity from 2000 to 2024, with a noticeable peak in 2024. This suggests a recent surge in popularity, possibly due to recent releases or increased interest in movies. Overall, the trend indicates variability in popularity over the years, with some periods of decline and recovery.
 
 
 
