--- a/Final Project Presentation.qmd
+++ b/Final Project Presentation.qmd
@@ -24,6 +24,7 @@ library(highcharter)
 library(tidyr)
 library(RColorBrewer)
 library(readr)
+library(circlize)
 ```
 
 ```{r}
@@ -31,6 +32,7 @@ library(readr)
 final_data <- read_csv("final_data.csv")
 
 ```
+
 ```{r, echo = FALSE}
 
 grouped_data <- final_data %>%
@@ -57,7 +59,11 @@ top_10_movies <- grouped_data %>%
 
 ```
 
-## ABOUT SCRAPING AND CODES… 
+## ABOUT SCRAPING AND CODES…
+
+![](images/clipboard-1697691976.png)
+
+![](images/clipboard-1674512836.png)
 
 ------------------------------------------------------------------------
 
@@ -192,10 +198,6 @@ country_graph <- graph_from_data_frame(df_pairs, directed = FALSE)
 
 ```{r}
 
-
-library(circlize)
-library(dplyr)
-
 # Prepare the dataset for the chord diagram
 df_chord <- df_pairs %>%
   select(from, to, weight) %>%
@@ -317,5 +319,6 @@ highchart() %>%
 
 ------------------------------------------------------------------------
 
-#               THANK YOU!🎖️
+# THANK YOU!🎖️
+
 ![Martin Scorsese](thank-you-martin-scorsese.gif)
