--- a/Final Project Presentation.qmd
+++ b/Final Project Presentation.qmd
@@ -5,6 +5,7 @@ format:
   revealjs:
       scrollable: true
       embed-resources: true
+      theme: solarized
 editor: visual
 ---
 
@@ -73,13 +74,17 @@ ggplot(top_countries, aes(x = reorder(country, n), y = n)) +
   geom_bar(stat = "identity", fill = "purple", alpha = 0.7) +
   coord_flip() +
   labs(title = "Top 10 Countries Producing the Most Movies", x = "Country", y = "Movie Count") +
-  theme_minimal()
+  theme_minimal() +
+  theme(
+    plot.background = element_rect(fill = "#fbf3e4", color = NA),
+    panel.background = element_rect(fill = "#fbf3e4", color = "#fbf3e4")
+  )
 
 ```
 
 ------------------------------------------------------------------------
 
-## Titles' Words Cloud ✏☁️
+## Titles' Words Cloud ️🖍️
 
 ```{r}
 word_data <- final_data %>%
@@ -97,7 +102,11 @@ ggplot(word_data, aes(label = word, size = n, color = n)) +
   geom_text_wordcloud(area_corr = TRUE) +
   scale_color_viridis_c() +
   labs(title = "Most Common Words in Movie Titles ") +
-  theme_minimal()
+  theme_minimal() +
+  theme(
+    plot.background = element_rect(fill = "#fbf3e4", color = NA),
+    panel.background = element_rect(fill = "#fbf3e4", color = "#fbf3e4")
+  )
 
 ```
 
@@ -111,7 +120,12 @@ ggplot(final_data, aes(x = as.factor(release_year))) +
   geom_bar(fill = "purple", alpha = 0.7) +
   labs(title = "Number of Movies by Year", x = "Release Year", y = "Movie Count") +
   theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+  theme(
+    plot.background = element_rect(fill = "#fbf3e4", color = NA),
+    panel.background = element_rect(fill = "#fbf3e4", color = "#fbf3e4"),
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  )
+  
 
 ```
 
@@ -124,7 +138,11 @@ ggplot(final_data, aes(x = as.factor(release_year))) +
 ggplot(final_data, aes(x = popularity)) +
   geom_histogram(bins = 20, fill = "purple", alpha = 0.7) +
   labs(title = "Popularity Distribution", x = "Popularity", y = "Movie Count") +
-  theme_minimal()
+  theme_minimal() +
+  theme(
+    plot.background = element_rect(fill = "#fbf3e4", color = NA),
+    panel.background = element_rect(fill = "#fbf3e4", color = "#fbf3e4")
+  )
 
 ```
 
@@ -163,7 +181,11 @@ ggplot(final_data, aes(x = popularity, y = total_awards)) +
   geom_point(alpha = 0.6, color = "purple") +
   geom_smooth(method = "lm", color = "red", se = FALSE) +  # Regression line
   labs(title = "Popularity vs. Awards", x = "Popularity", y = "Total Awards") +
-  theme_minimal()
+  theme_minimal() +
+  theme(
+    plot.background = element_rect(fill = "#fbf3e4", color = NA),
+    panel.background = element_rect(fill = "#fbf3e4", color = "#fbf3e4")
+  )
 
 ```
 
