--- a/Final Project Presentation.qmd
+++ b/Final Project Presentation.qmd
@@ -62,13 +62,15 @@ top_10_movies <- grouped_data %>%
 
 ## Objective
 
----
+------------------------------------------------------------------------
 
 ## ABOUT SCRAPING AND CODES…
 
-![](Screenshot 2025-03-26 at 2.32.42 PM.png)
+![](picture1.png)
 
-![](Screenshot 2025-03-26 at 2.34.12 PM.png)
+---
+
+![](picture2.png)
 
 ------------------------------------------------------------------------
 
