--- a/Final Project Presentation.qmd
+++ b/Final Project Presentation.qmd
@@ -68,11 +68,13 @@ top_10_movies <- grouped_data %>%
 
 ## ABOUT SCRAPING AND CODES…
 
-![](Screenshot 2025-03-26 at 2.32.42 PM.png)
+![](picture1.png)
 
----
+------------------------------------------------------------------------
 
-![](Screenshot 2025-03-26 at 2.34.12 PM.png)
+![](picture2.png)
+
+a
 
 ------------------------------------------------------------------------
 
