--- a/Final Project Presentation.qmd
+++ b/Final Project Presentation.qmd
@@ -74,6 +74,11 @@ top_10_movies <- grouped_data %>%
 
 ![](picture2.png)
 
+---
+
+## What Happened For Country and Popularity?
+
+![](picture3.png)
 
 ------------------------------------------------------------------------
 
@@ -115,12 +120,13 @@ word_data <- word_data %>%
 # Improved Word Cloud
 ggplot(word_data, aes(label = word, size = n, color = n)) +
   geom_text_wordcloud(area_corr = TRUE) +
-  scale_color_viridis_c() +
+  scale_color_gradient(low = "#4b6cb7", high = "#182848")  +
   labs(title = "Most Common Words in Movie Titles ") +
   theme_minimal() +
   theme(
     plot.background = element_rect(fill = "#fbf3e4", color = NA),
-    panel.background = element_rect(fill = "#fbf3e4", color = "#fbf3e4")
+    panel.background = element_rect(fill = "#fbf3e4", color = "#fbf3e4"),
+  plot.title = element_text(size = 16, face = "bold", hjust = 0.5, color = "#2e2e2e")
   )
 
 ```
@@ -251,18 +257,19 @@ chordDiagram(df_chord,
 
 # Add title with improved formatting
 title("Movie Co-Production Chord Diagram", 
-      cex.main = 1.5, font.main = 1.5, col.main = "darkblue")
+      cex.main = 1.3, font.main = 1.3, col.main = "darkblue")
 
  #Add a legend without a border
 legend("topright", legend = names(country_colors),  # Country names
        fill = country_colors,  # Corresponding colors
-       cex = 0.8,  # Adjust text size
-       title = "Country Colors", title.col = "darkblue",
+       cex = 0.5,  # Adjust text size
+       title = "Country Colors", title.col = "black",
        bty = "n", # Remove legend border
-       inset = c(0, -0.05),  # 🔽 Move the legend slightly down
+       inset = c(0, -0.009),  # 🔽 Move the legend slightly down
        y.intersp = 1.3)  # 🔽 Increase spacing between items
 
 ```
+
 
 ------------------------------------------------------------------------
 
